@@ -2,10 +2,7 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
+import java.util.*;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -14,13 +11,16 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
-                new Account("123", "Petr Arsentev", "eDer3432f"),
-                new Account("142", "Petr Arsentev", "000001"),
-                new Account("123", "Petr Arsentev", "eDer3432f"));
+        List<Account> accounts = new ArrayList<>(
+                List.of(
+                        new Account("123", "Petr Arsentev", "eDer3432f"),
+                        new Account("142", "Petr Arsentev", "000001"),
+                        new Account("123", "Petr Arsentev", "eDer3432f")
+                )
+        );
 
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                Set.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -30,13 +30,16 @@ public class NotifyAccountTest {
 
     @Test
     public void withThreeDuplicate() {
-        List<Account> accounts = Arrays.asList(
-                new Account("142", "Petr Arsentev", "000001"),
-                new Account("142", "Petr Arsentev", "000001"),
-                new Account("142", "Petr Arsentev", "000001"));
+        List<Account> accounts = new ArrayList<>(
+                List.of(
+                        new Account("142", "Petr Arsentev", "000001"),
+                        new Account("142", "Petr Arsentev", "000001"),
+                        new Account("142", "Petr Arsentev", "000001")
+                )
+        );
 
         HashSet<Account> expect = new HashSet<>(
-                Collections.singletonList(
+                Set.of(
                         new Account("142", "Petr Arsentev", "000001"))
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
